tests/golden/type_errors/array_filter_non_function.cd
filter([1], 42);
