tests/golden/type_errors/array_filter_non_function.err
Type error at 1:15: filter expects function as second argument, got number
  filter([1], 42);
                ^
